--- a/src/main/resources/regression/dl23-doc-segmented-d2q-t5.yaml
+++ b/src/main/resources/regression/dl23-doc-segmented-d2q-t5.yaml
@@ -1,8 +1,8 @@
 ---
-corpus: msmarco-v2-doc-segmented
-corpus_path: collections/msmarco/msmarco_v2_doc_segmented/
+corpus: msmarco-v2-doc-segmented-d2q-t5
+corpus_path: collections/msmarco/msmarco_v2_doc_segmented_d2q-t5/
 
-index_path: indexes/lucene-index.msmarco-v2-doc-segmented/
+index_path: indexes/lucene-index.msmarco-v2-doc-segmented-d2q-t5/
 collection_class: MsMarcoV2DocCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 24
@@ -10,7 +10,7 @@ index_options: -storeRaw
 index_stats:
   documents: 124131414
   documents (non-empty): 124131414
-  total terms: 24780918039
+  total terms: 30376034132
 
 metrics:
   - metric: MAP@100
@@ -59,43 +59,43 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    params: -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000 -bm25
     results:
       MAP@100:
-        - 0.1341
+        - 0.1460
       MRR@100:
-        - 0.6477
+        - 0.7029
       nDCG@10:
-        - 0.3405
+        - 0.3612
       R@100:
-        - 0.2884
+        - 0.3078
       R@1000:
-        - 0.5662
+        - 0.5967
   - name: bm25-default+rm3
     display: +RM3
     params: -bm25 -rm3 -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP@100:
-        - 0.1652
+        - 0.1699
       MRR@100:
-        - 0.6467
+        - 0.6455
       nDCG@10:
-        - 0.3452
+        - 0.3454
       R@100:
-        - 0.3129
+        - 0.3350
       R@1000:
-        - 0.5755
+        - 0.6006
   - name: bm25-default+rocchio
     display: +Rocchio
     params: -bm25 -rocchio -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP@100:
-        - 0.1658
+        - 0.1706
       MRR@100:
-        - 0.6284
+        - 0.6405
       nDCG@10:
-        - 0.3451
+        - 0.3517
       R@100:
-        - 0.3220
+        - 0.3373
       R@1000:
-        - 0.5834
+        - 0.6059
