--- a/src/main/resources/regression/dl23-passage-d2q-t5.yaml
+++ b/src/main/resources/regression/dl23-passage-d2q-t5.yaml
@@ -1,49 +1,49 @@
 ---
-corpus: msmarco-v2-doc-segmented
-corpus_path: collections/msmarco/msmarco_v2_doc_segmented/
+corpus: msmarco-v2-passage-d2q-t5
+corpus_path: collections/msmarco/msmarco_v2_passage_d2q-t5/
 
-index_path: indexes/lucene-index.msmarco-v2-doc-segmented/
-collection_class: MsMarcoV2DocCollection
+index_path: indexes/lucene-index.msmarco-v2-passage-d2q-t5/
+collection_class: MsMarcoV2PassageCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 24
 index_options: -storeRaw
 index_stats:
-  documents: 124131414
-  documents (non-empty): 124131414
-  total terms: 24780918039
+  documents: 138364198
+  documents (non-empty): 138364198
+  total terms: 16961479264
 
 metrics:
   - metric: MAP@100
     command: target/appassembler/bin/trec_eval
-    params: -c -M 100 -m map
+    params: -c -M 100 -m map -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: no
+    can_combine: false
   - metric: MRR@100
     command: target/appassembler/bin/trec_eval
-    params: -c -M 100 -m recip_rank
+    params: -c -M 100 -m recip_rank -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - metric: nDCG@10
     command: target/appassembler/bin/trec_eval
     params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - metric: R@100
     command: target/appassembler/bin/trec_eval
-    params: -c -m recall.100
+    params: -c -m recall.100 -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: R@1000
     command: target/appassembler/bin/trec_eval
-    params: -c -m recall.1000
+    params: -c -m recall.1000 -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -51,51 +51,51 @@ metrics:
 
 topic_reader: TsvInt
 topics:
-  - name: "[DL23 (Doc)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
+  - name: "[DL23 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
     id: dl23
     path: topics.dl23.txt
-    qrel: qrels.dl23-doc.txt
+    qrel: qrels.dl23-passage.txt
 
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    params: -bm25
     results:
       MAP@100:
-        - 0.1341
+        - 0.1085
       MRR@100:
-        - 0.6477
+        - 0.5234
       nDCG@10:
-        - 0.3405
+        - 0.3156
       R@100:
-        - 0.2884
+        - 0.2946
       R@1000:
-        - 0.5662
+        - 0.5608
   - name: bm25-default+rm3
     display: +RM3
-    params: -bm25 -rm3 -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    params: -bm25 -rm3 -collection MsMarcoV2PassageCollection
     results:
       MAP@100:
-        - 0.1652
+        - 0.1135
       MRR@100:
-        - 0.6467
+        - 0.4961
       nDCG@10:
-        - 0.3452
+        - 0.3132
       R@100:
-        - 0.3129
+        - 0.3114
       R@1000:
-        - 0.5755
+        - 0.5978
   - name: bm25-default+rocchio
     display: +Rocchio
-    params: -bm25 -rocchio -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    params: -bm25 -rocchio -collection MsMarcoV2PassageCollection
     results:
       MAP@100:
-        - 0.1658
+        - 0.1109
       MRR@100:
-        - 0.6284
+        - 0.4650
       nDCG@10:
-        - 0.3451
+        - 0.3136
       R@100:
-        - 0.3220
+        - 0.3145
       R@1000:
-        - 0.5834
+        - 0.5942
