--- a/src/main/java/io/anserini/reproduce/msmarco_html_v1_passage.template
+++ b/src/main/java/io/anserini/reproduce/msmarco_html_v1_passage.template
@@ -140,8 +140,8 @@ pre[class*="prettyprint"] {
 
 <div class="container my-4">
 
-<p>The two-click<a href="#" data-mdb-toggle="tooltip" title="What are the two clicks, you ask? Copy and paste!"><sup>*</sup></a> reproduction matrix below provides commands for reproducing experimental results reported in a number of papers, denoted by the references in square brackets.
-Instructions for programmatic execution are shown at the bottom of this page (scroll down).</p>
+<!-- p>The two-click<a href="#" data-mdb-toggle="tooltip" title="What are the two clicks, you ask? Copy and paste!"><sup>*</sup></a> reproduction matrix below provides commands for reproducing experimental results reported in a number of papers, denoted by the references in square brackets.
+Instructions for programmatic execution are shown at the bottom of this page (scroll down).</p -->
 
 <div class="table-responsive">
   <table class="table">
